# sae-analysis

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLEANUP_CHANGELOG.md  README.md  analyze_feature_token_influence.py  analyze_feature_token_influence_simple.py  env.sh  note.md  plot_feature_entropy_histogram.py  pyproject.toml  python3.sh
.claude/: .nfs0000000036275795000102b8
data/: neuronpedia_explanations.csv  neuronpedia_explanations.json
data/gemma-2-2b/: latest
data/gpt2-small/: latest
data/pythia-70m/: latest
data/qwen2-0.5b/: latest
deprecated/: analyze_feature_token_influence_final.py  analyze_feature_token_influence_notebook.py  analyze_feature_token_influence_with_batches.py  fix_notebook.py  logit_lens.py  plot_entropy_vs_depth.py  strip_notebook_outputs.py  test_generation.py  test_lm_infer.py
notebooks/: README.md
notes/: cluster_progress.md  entropy_vs_depth_reproduction.md  feature_level_vs_entropy.md  running_notes.md  sae_absorption_splitting_litreview.md
paper/: paper.tex
plots/: feature_level_vs_influence_entropy_pythia-70m.json
sae-analysis-v1/: AGENTS.md  CLAUDE.md  CLEANUP_CHANGELOG.md  env.sh  pyproject.toml  python3.sh  run_llama3_8b.sh.sh
sae-analysis-v1/.claude/: .nfs00000000361b9dea0000ffbf  .nfs000000003620a3390000ffc4
sae-analysis-v1/paper/: references.bib
scripts/: compare_entropies.py  compare_entropies_multi_layer.py  feature_location_analysis.py  feature_sparsity.py  feature_token_influence.py  plot-logic-note.md  run_plot.py  token_vector_influence.py
supplementary/: authors-note.md  know-how.md
(+137 files in other folders)
