[tool.poetry]
name = "sae-analysis"
version = "0.1.0"
description = "Analyzing the Nonlocality of Sparse Autoencoder Features — gradient-based influence entropy of SAE features across transformer depth and context length, motivated by an AdS/CFT holographic analogy."
authors = ["Ylias Sadki (University of Oxford) <ylias.sadki@physics.ox.ac.uk>"]
license = "MIT"
readme = "README.md"
keywords = [
    "sparse-autoencoders",
    "mechanistic-interpretability",
    "holographic-duality",
    "language-models",
    "PyTorch",
]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2.1.0"
transformers = ">=4.38.0"
accelerate = ">=0.27.0"
datasets = ">=2.18.0"
einops = ">=0.7.0"
numpy = ">=1.26.0"
scipy = ">=1.11.0"
matplotlib = ">=3.8.0"
seaborn = ">=0.13.0"
pandas = ">=2.2.1"
tqdm = ">=4.66.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
notebook = "^7.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
